@@ -4,14 +4,12 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.NoResultException;
 import jakarta.persistence.PersistenceContext;
-import ru.mephi.trainer.exception.TrainerNotFoundException;
-import ru.mephi.trainer.rest.dto.response.CompletedTaskTrainerPointResponse;
-import ru.mephi.trainer.rest.dto.response.TrainerProgressResponse;
+import ru.mephi.trainer.rest.dto.response.profile.CompletedTaskTrainerPointResponse;
+import ru.mephi.trainer.rest.dto.response.profile.TrainerProgressResponse;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class TrainerProgressRepository {
@@ -21,11 +19,11 @@ public class TrainerProgressRepository {
 
     public Optional<TrainerProgressResponse> getTrainerProgress(UUID userId, UUID trainerId) {
         String sql = """
-                    SELECT 
+                    SELECT
                         t.id as trainer_id,
                         t.name as trainer_name,
                         COALESCE(SUM(ta.points), 0) as earned_score,
-                        COALESCE(SUM(CAST(task.config->>'points' AS DOUBLE PRECISION)), 0) as max_possible_score,                        
+                        COALESCE(SUM(CAST(task.config->>'points' AS INTEGER)), 0) as max_possible_score,
                         COUNT(DISTINCT ta.id) as tasks_completed,
                         COUNT(DISTINCT task.id) as total_tasks
                     FROM trainers t
@@ -84,6 +82,6 @@ public class TrainerProgressRepository {
                     dto.setPoint(((Number) row[2]).intValue());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
